Fixed the visibility of heading text in Contact page (#906)

--- a/assets/css_files/contact.css
+++ b/assets/css_files/contact.css
@@ -136,6 +136,7 @@ body {
     font-size: 30px;
     letter-spacing: 0.5px;
     text-shadow: 1px 1px 2px black, 1px 1px 2px white;
+    color: black;
 }
 
 .form-fields {
